<resources>
    <string name="app_name">NearHoneyTip</string>
    <string name="action_settings">설정</string>
    <string name="action_previous">뒤로</string>
    <string name="action_cancel">취소</string>
    <string name="action_next">다음</string>
    <string name="action_save">저장</string>
    <string name="button_like">좋아요</string>
    <string name="button_reply">댓글</string>
    <string name="distance">거리: </string>
    <string name="meter">m</string>
    <string name="title_activity_writing_tip">New Honey Tip</string>
    <string name="storename_hint">상점명 </string>
    <string name="tipdetail_hint">팁 내용을 적어주세요. </string>
    <string name="drawer_profile">프로필 변경</string>
    <string name="drawer_mytip">내 글 보기</string>
    <string name="drawer_setting">설정하기</string>
    <string name="temp">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="liked">liked</string>
    <string name="like_num">like number</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_view_tip_detail">ViewTipDetailActivity</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>
