<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".WritingActivity">
    <item android:id="@+id/action_cancel"
        android:title="@string/action_cancel"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item android:id="@+id/action_previous"
        android:title="@string/action_previous"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:visible="false" />

    <item android:id="@+id/action_next"
        android:title="@string/action_next"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_save"
        android:title="@string/action_save"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:visible="false" />

</menu>
