<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/placeCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="@dimen/card_corner_radius"
    card_view:cardElevation="@dimen/card_elevation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/placeImage"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_weight="1"
            android:scaleType="centerCrop" />

        <!-- Used for the ripple effect on touch -->
        <RelativeLayout
            android:id="@+id/placeTipHolder"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:orientation="vertical"
            android:layout_marginLeft="4dp">

            <TextView
                android:id="@+id/placeStoreName"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_gravity="top"
                android:gravity="left"
                android:paddingLeft="4dp"
                android:paddingTop="6dp"
                android:text="@string/temp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black"
                android:textSize="18dp"
                android:ellipsize="end" />

            <TextView
                android:id="@+id/placeTipDetail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/placeStoreName"
                android:layout_gravity="top"
                android:gravity="left"
                android:paddingLeft="4dp"
                android:paddingTop="8dp"
                android:text="@string/temp"
                android:textAppearance="?android:attr/textAppearance"
                android:textColor="@android:color/black"
                android:textSize="14dp"
                android:ellipsize="end" />

            <ImageView
                android:id="@+id/placeProfilePhoto"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_below="@+id/placeTipDetail"
                android:scaleType="centerInside"
                android:layout_marginLeft="4dp" />

            <TextView
                android:id="@+id/placeNickName"
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_alignTop="@+id/placeProfilePhoto"
                android:layout_gravity="top"
                android:layout_toEndOf="@+id/placeProfilePhoto"
                android:gravity="left"
                android:paddingLeft="4dp"
                android:paddingTop="8dp"
                android:text="@string/temp"
                android:textAppearance="?android:attr/textAppearance"
                android:textColor="@android:color/black"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/placeDate"
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_below="@+id/placeNickName"
                android:layout_gravity="top"
                android:layout_toEndOf="@+id/placeProfilePhoto"
                android:gravity="left"
                android:paddingLeft="4dp"
                android:paddingTop="6dp"
                android:text="@string/temp"
                android:textAppearance="?android:attr/textAppearance"
                android:textColor="@android:color/black"
                android:textSize="12dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/placeDate"
                android:paddingTop="4dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/likeBtn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="6"
                    android:layout_marginStart="10dp"
                    android:background="#00000000"
                    android:drawablePadding="-10dp"
                    android:drawableStart="@drawable/icon_like_off"
                    android:text="@string/button_like"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginLeft="4dp"
                    android:focusable="false"
                    android:textSize="12dp" />

                <Button
                    android:id="@+id/replyBtn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="7"
                    android:background="#00000000"
                    android:drawablePadding="-16dp"
                    android:drawableStart="@drawable/icon_reply"
                    android:text="@string/button_reply"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12dp" />
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>